...
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.FilmPageFragment"
    android:fitsSystemWindows="false"
    android:id="@+id/film_page_container">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true">
...
        android:layout_margin="@dimen/margin_fab"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_share_24"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_fab"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|start"
        app:srcCompat="@drawable/ic_round_favorite_border_24"/>
...
