<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_purple_green_orange"
    android:visibility="invisible"
    tools:context=".CompilesFragment"
    android:id="@+id/compile_container">

</androidx.constraintlayout.widget.ConstraintLayout>